# Traffic-System-Backend

./: .gitignore  README.md  docker-compose.yml
crow-backend/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  main.cpp  server
database-scripts/: schema.sql
django-gateway/: manage.py
django-gateway/api/: tests.py  urls.py  views.py
django-gateway/traffic_gateway/: asgi.py  settings.py  urls.py
docs/: ISSUES.md  class_diagram.md  sequence_congestion_detection.md  sequence_emergency_alert.md  sequence_register_vehicle.md  sequence_report_violation.md  use_case_diagram.md
src/crow-backend/: CMakeLists.txt  Dockerfile  main.cpp  traffic_logic.h
src/database/: schema.sql
src/django-gateway/: requirements.txt
src/django-gateway/api/: urls.py  views.py
src/django-gateway/traffic_gateway/: settings.py  wsgi.py
tests/: README.md
tests/integration/: conftest.py  requirements.txt  test_integration.py
tests/uat/: UAT-01-vehicle-registration.md  UAT-02-plate-logging.md  UAT-03-violation-fine-issuance.md  UAT-04-congestion-detection.md  UAT-05-emergency-vehicle-prioritisation.md
tests/unit/cpp/: test_traffic_logic.cpp
tests/unit/django/: README.md
